--- a/authors.html
+++ b/authors.html
@@ -3,7 +3,8 @@
 <head>
         <meta charset="utf-8" />
         <title>Log - Authors</title>
-        <link rel="stylesheet" href="/theme/css/main.css" />
+        <link rel="stylesheet" href="https://freeeebie.github.io/theme/css/main.css" />
+        <link href="https://freeeebie.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Log Atom Feed" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -12,14 +13,17 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">Log </a></h1>
+                <h1><a href="https://freeeebie.github.io/">Log </a></h1>
                 <nav><ul>
+                    <li><a href="https://freeeebie.github.io/category/misc.html">misc</a></li>
+                    <li><a href="https://freeeebie.github.io/category/test.html">Test</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Authors on Log</h1>
     <ul>
+        <li><a href="https://freeeebie.github.io/author/freeeebie.html">freeeebie</a> (8)</li>
     </ul>
 </section>
 
@@ -36,6 +40,7 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
+                            <li><a href="https://freeeebie.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="#">You can add links in your config file</a></li>
                             <li><a href="#">Another social link</a></li>
