--- a/mle.html
+++ b/mle.html
@@ -13,13 +13,13 @@
 
         <meta name="author" content="freeeebie" />
         <meta name="keywords" content="math" />
-        <meta name="description" content="최우도 추정 Maximum likelihood estimation 데이터들이 어떤 확률 분포에 가까운지 추정하는 방법 중 하나. $$D = {x_1, x_2,\cdots,x_N}$$ 일 때, 데이터 집합의 정규분포의 위치와 모양을 결정 짓는 매개 변수 $\mu$ 와 $\sigma^2$ 를 구한다면, 우도 $L(D, \mu, \sigma)$ 여기에 로그를 취하면, $\mathcal{L}(D, \mu, \sigma)$ 최우도 ..." />
+        <meta name="description" content="최우도 추정 Maximum likelihood estimation 데이터들이 어떤 확률 분포에 가까운지 추정하는 방법 중 하나. $$D = {x_1, x_2,\cdots,x_N}$$ 일 때, 데이터 집합의 정규분포의 위치와 모양을 결정 짓는 매개 변수 \(\mu\) 와 \(\sigma^2\) 를 구한다면, 우도 \(L(D, \mu, \sigma)\) 여기에 로그를 취하면, \(\mathcal{L}(D, \mu, \sigma)\) 최우도 ..." />
 
         <meta property="og:site_name" content="Log" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="&#34;MLE&#34;"/>
         <meta property="og:url" content="https://freeeebie.github.io/mle.html"/>
-        <meta property="og:description" content="최우도 추정 Maximum likelihood estimation 데이터들이 어떤 확률 분포에 가까운지 추정하는 방법 중 하나. $$D = {x_1, x_2,\cdots,x_N}$$ 일 때, 데이터 집합의 정규분포의 위치와 모양을 결정 짓는 매개 변수 $\mu$ 와 $\sigma^2$ 를 구한다면, 우도 $L(D, \mu, \sigma)$ 여기에 로그를 취하면, $\mathcal{L}(D, \mu, \sigma)$ 최우도 ..."/>
+        <meta property="og:description" content="최우도 추정 Maximum likelihood estimation 데이터들이 어떤 확률 분포에 가까운지 추정하는 방법 중 하나. $$D = {x_1, x_2,\cdots,x_N}$$ 일 때, 데이터 집합의 정규분포의 위치와 모양을 결정 짓는 매개 변수 \(\mu\) 와 \(\sigma^2\) 를 구한다면, 우도 \(L(D, \mu, \sigma)\) 여기에 로그를 취하면, \(\mathcal{L}(D, \mu, \sigma)\) 최우도 ..."/>
         <meta property="article:published_time" content="2016-09-18" />
             <meta property="article:section" content="misc" />
             <meta property="article:tag" content="math" />
@@ -108,14 +108,75 @@ Log            </a>
                 <h1>최우도 추정</h1>
 <p>Maximum likelihood estimation<br />
 데이터들이 어떤 확률 분포에 가까운지 추정하는 방법 중 하나.  </p>
-<p>$$D = {x_1, x_2,\cdots,x_N}$$
+<div class="math">$$D = {x_1, x_2,\cdots,x_N}$$</div>
+<p>
 일 때, 
-데이터 집합의 정규분포의 위치와 모양을 결정 짓는 매개 변수 $\mu$ 와 $\sigma^2$ 를 구한다면,<br />
-우도  $L(D, \mu, \sigma)$<br />
-여기에 로그를 취하면, $\mathcal{L}(D, \mu, \sigma)$  </p>
+데이터 집합의 정규분포의 위치와 모양을 결정 짓는 매개 변수 <span class="math">\(\mu\)</span> 와 <span class="math">\(\sigma^2\)</span> 를 구한다면,<br />
+우도  <span class="math">\(L(D, \mu, \sigma)\)</span><br />
+여기에 로그를 취하면, <span class="math">\(\mathcal{L}(D, \mu, \sigma)\)</span>  </p>
 <p>최우도 추정은 우도를 편미분하여 최대값을 구한다.<br />
-$$ \hat\mu = \Sigma_i x^i/N \Leftrightarrow \partial L(D, \mu, \sigma)$$<br />
-$$ \hat\sigma^2 = \Sigma_i (x_i - \hat\mu)^2 / N \Leftrightarrow \partial \mathcal{L}(D, \mu, \sigma) $$  </p>
+</p>
+<div class="math">$$ \hat\mu = \Sigma_i x^i/N \Leftrightarrow \partial L(D, \mu, \sigma)$$</div>
+<p><br />
+</p>
+<div class="math">$$ \hat\sigma^2 = \Sigma_i (x_i - \hat\mu)^2 / N \Leftrightarrow \partial \mathcal{L}(D, \mu, \sigma) $$</div>
+<script type="text/javascript">if (!document.getElementById('mathjaxscript_pelican_#%@#$@#')) {
+    var align = "center",
+        indent = "0em",
+        linebreak = "false";
+
+    if (false) {
+        align = (screen.width < 768) ? "left" : align;
+        indent = (screen.width < 768) ? "0em" : indent;
+        linebreak = (screen.width < 768) ? 'true' : linebreak;
+    }
+
+    var mathjaxscript = document.createElement('script');
+    var location_protocol = (false) ? 'https' : document.location.protocol;
+    if (location_protocol !== 'http' && location_protocol !== 'https') location_protocol = 'https:';
+    mathjaxscript.id = 'mathjaxscript_pelican_#%@#$@#';
+    mathjaxscript.type = 'text/javascript';
+    mathjaxscript.src = location_protocol + '//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML';
+    mathjaxscript[(window.opera ? "innerHTML" : "text")] =
+        "MathJax.Hub.Config({" +
+        "    config: ['MMLorHTML.js']," +
+        "    TeX: { extensions: ['AMSmath.js','AMSsymbols.js','noErrors.js','noUndefined.js'], equationNumbers: { autoNumber: 'AMS' } }," +
+        "    jax: ['input/TeX','input/MathML','output/HTML-CSS']," +
+        "    extensions: ['tex2jax.js','mml2jax.js','MathMenu.js','MathZoom.js']," +
+        "    displayAlign: '"+ align +"'," +
+        "    displayIndent: '"+ indent +"'," +
+        "    showMathMenu: true," +
+        "    messageStyle: 'normal'," +
+        "    tex2jax: { " +
+        "        inlineMath: [ ['\\\\(','\\\\)'] ], " +
+        "        displayMath: [ ['$$','$$'] ]," +
+        "        processEscapes: true," +
+        "        preview: 'TeX'," +
+        "    }, " +
+        "    'HTML-CSS': { " +
+        "        styles: { '.MathJax_Display, .MathJax .mo, .MathJax .mi, .MathJax .mn': {color: 'inherit ! important'} }," +
+        "        linebreaks: { automatic: "+ linebreak +", width: '90% container' }," +
+        "    }, " +
+        "}); " +
+        "if ('default' !== 'default') {" +
+            "MathJax.Hub.Register.StartupHook('HTML-CSS Jax Ready',function () {" +
+                "var VARIANT = MathJax.OutputJax['HTML-CSS'].FONTDATA.VARIANT;" +
+                "VARIANT['normal'].fonts.unshift('MathJax_default');" +
+                "VARIANT['bold'].fonts.unshift('MathJax_default-bold');" +
+                "VARIANT['italic'].fonts.unshift('MathJax_default-italic');" +
+                "VARIANT['-tex-mathit'].fonts.unshift('MathJax_default-italic');" +
+            "});" +
+            "MathJax.Hub.Register.StartupHook('SVG Jax Ready',function () {" +
+                "var VARIANT = MathJax.OutputJax.SVG.FONTDATA.VARIANT;" +
+                "VARIANT['normal'].fonts.unshift('MathJax_default');" +
+                "VARIANT['bold'].fonts.unshift('MathJax_default-bold');" +
+                "VARIANT['italic'].fonts.unshift('MathJax_default-italic');" +
+                "VARIANT['-tex-mathit'].fonts.unshift('MathJax_default-italic');" +
+            "});" +
+        "}";
+    (document.body || document.getElementsByTagName('head')[0]).appendChild(mathjaxscript);
+}
+</script>
             </div>
             <!-- /.entry-content -->
         </article>
