--- a/authors.html
+++ b/authors.html
@@ -54,6 +54,9 @@ Log            </a>
                             <a href="https://freeeebie.github.io/category/misc.html">Misc</a>
                         </li>
                         <li >
+                            <a href="https://freeeebie.github.io/category/posts.html">Posts</a>
+                        </li>
+                        <li >
                             <a href="https://freeeebie.github.io/category/test.html">Test</a>
                         </li>
             </ul>
@@ -70,6 +73,7 @@ Log            </a>
         <div class="col-sm-9">
   <h1>Authors on Log</h1>
         <li><a href="https://freeeebie.github.io/author/freeeebie.html">freeeebie</a> (8)</li>
+        <li><a href="https://freeeebie.github.io/author/me.html">me</a> (1)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
