--- a/first_post.html
+++ b/first_post.html
@@ -59,6 +59,9 @@ Log            </a>
                         <li >
                             <a href="https://freeeebie.github.io/category/misc.html">Misc</a>
                         </li>
+                        <li >
+                            <a href="https://freeeebie.github.io/category/posts.html">Posts</a>
+                        </li>
                         <li class="active">
                             <a href="https://freeeebie.github.io/category/test.html">Test</a>
                         </li>
