--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@ Log            </a>
                             <a href="https://freeeebie.github.io/category/misc.html">Misc</a>
                         </li>
                         <li >
+                            <a href="https://freeeebie.github.io/category/posts.html">Posts</a>
+                        </li>
+                        <li >
                             <a href="https://freeeebie.github.io/category/test.html">Test</a>
                         </li>
             </ul>
@@ -183,6 +186,25 @@ log 적용<br />
 5 step<br />
 DCT ...</p>
                     <a class="btn btn-default btn-xs" href="https://freeeebie.github.io/mfcc.html">more ...</a>
+                </div>
+            </article>
+            <hr/>
+            <article>
+                <h2><a href="https://freeeebie.github.io/first-post.html">First Post</a></h2>
+                <div class="summary">
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="First-post!">First post!<a class="anchor-link" href="#First-post!">&#182;</a></h1><p>This will be the first post in our new Pelican blog! You can add any code or markdown cells to this Jupyter notebook, and they will be rendered on your blog.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+                    <a class="btn btn-default btn-xs" href="https://freeeebie.github.io/first-post.html">more ...</a>
                 </div>
             </article>
             <hr/>
