--- a/first-post.html
+++ b/first-post.html
@@ -9,7 +9,7 @@
 
 
 
-<link rel="canonical" href="https://freeeebie.github.io/first-post.html">
+<link rel="canonical" href="/first-post.html">
 
         <meta name="author" content="me" />
         <meta name="keywords" content="python" />
@@ -18,7 +18,7 @@
         <meta property="og:site_name" content="Log" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="First Post"/>
-        <meta property="og:url" content="https://freeeebie.github.io/first-post.html"/>
+        <meta property="og:url" content="/first-post.html"/>
         <meta property="og:description" content="First post!¶This will be the first post in our new Pelican blog! You can add any code or markdown cells to this Jupyter notebook, and they will be rendered on your blog."/>
         <meta property="article:published_time" content="2016-06-08" />
             <meta property="article:section" content="posts" />
@@ -27,19 +27,15 @@
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="https://freeeebie.github.io/theme/css/bootstrap.min.css" type="text/css"/>
-    <link href="https://freeeebie.github.io/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="/theme/css/bootstrap.min.css" type="text/css"/>
+    <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="https://freeeebie.github.io/theme/css/pygments/native.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://freeeebie.github.io/theme/css/style.css" type="text/css"/>
-
-        <link href="https://freeeebie.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
-              title="Log ATOM Feed"/>
+    <link href="/theme/css/pygments/native.css" rel="stylesheet">
+    <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
 
 
 
-        <link href="https://freeeebie.github.io/feeds/posts.atom.xml" type="application/atom+xml" rel="alternate"
-              title="Log posts ATOM Feed"/>
+
 
 </head>
 <body>
@@ -53,19 +49,19 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="https://freeeebie.github.io/" class="navbar-brand">
+            <a href="/" class="navbar-brand">
 Log            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                         <li >
-                            <a href="https://freeeebie.github.io/category/misc.html">Misc</a>
+                            <a href="/category/misc.html">Misc</a>
                         </li>
                         <li class="active">
-                            <a href="https://freeeebie.github.io/category/posts.html">Posts</a>
+                            <a href="/category/posts.html">Posts</a>
                         </li>
                         <li >
-                            <a href="https://freeeebie.github.io/category/test.html">Test</a>
+                            <a href="/category/test.html">Test</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -83,7 +79,7 @@ Log            </a>
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="https://freeeebie.github.io/first-post.html"
+                    <a href="/first-post.html"
                        rel="bookmark"
                        title="Permalink to First Post">
                         First Post
@@ -104,7 +100,7 @@ Log            </a>
 
 
 <span class="label label-default">Tags</span>
-	<a href="https://freeeebie.github.io/tag/python.html">python</a>
+	<a href="/tag/python.html">python</a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
@@ -1292,7 +1288,7 @@ l6SGjLskNWTcJakh4y5JDf0vZB9FlJ1A1boAAAAASUVORK5CYII=
    <div class="container">
       <hr>
       <div class="row">
-         <div class="col-xs-10">&copy; 2016 freeeebie
+         <div class="col-xs-10">&copy; 2017 freeeebie
             &middot; Powered by <a href="https://github.com/getpelican/pelican-themes/tree/master/pelican-bootstrap3" target="_blank">pelican-bootstrap3</a>,
             <a href="http://docs.getpelican.com/" target="_blank">Pelican</a>,
             <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>         </div>
@@ -1300,13 +1296,13 @@ l6SGjLskNWTcJakh4y5JDf0vZB9FlJ1A1boAAAAASUVORK5CYII=
       </div>
    </div>
 </footer>
-<script src="https://freeeebie.github.io/theme/js/jquery.min.js"></script>
+<script src="/theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="https://freeeebie.github.io/theme/js/bootstrap.min.js"></script>
+<script src="/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="https://freeeebie.github.io/theme/js/respond.min.js"></script>
+<script src="/theme/js/respond.min.js"></script>
 
 
 </body>
