--- a/mfcc.html
+++ b/mfcc.html
@@ -9,7 +9,7 @@
 
 
 
-<link rel="canonical" href="https://freeeebie.github.io/mfcc.html">
+<link rel="canonical" href="/mfcc.html">
 
         <meta name="author" content="freeeebie" />
         <meta name="keywords" content=""Machine&nbsp,Learning"" />
@@ -18,7 +18,7 @@
         <meta property="og:site_name" content="Log" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="&#34;MFCC&#34;"/>
-        <meta property="og:url" content="https://freeeebie.github.io/mfcc.html"/>
+        <meta property="og:url" content="/mfcc.html"/>
         <meta property="og:description" content="음성 데이터의 특징 추출 성대의 떨림은 고유함.성도를 system H 라고 가정하여 이 시스템 H의 특징을 찾음. 1 step 시그널을 일정 frame 단위로 나눔. windowing 실행 2 step 해당 frame에 Fourier Transform을 실행하여 power spectrum 을 구함. 3 step mel filter bank 적용 4 step log 적용 5 step DCT ..."/>
         <meta property="article:published_time" content="2016-09-11" />
             <meta property="article:section" content="misc" />
@@ -28,19 +28,15 @@
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="https://freeeebie.github.io/theme/css/bootstrap.min.css" type="text/css"/>
-    <link href="https://freeeebie.github.io/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="/theme/css/bootstrap.min.css" type="text/css"/>
+    <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="https://freeeebie.github.io/theme/css/pygments/native.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://freeeebie.github.io/theme/css/style.css" type="text/css"/>
-
-        <link href="https://freeeebie.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
-              title="Log ATOM Feed"/>
+    <link href="/theme/css/pygments/native.css" rel="stylesheet">
+    <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
 
 
 
-        <link href="https://freeeebie.github.io/feeds/misc.atom.xml" type="application/atom+xml" rel="alternate"
-              title="Log misc ATOM Feed"/>
+
 
 </head>
 <body>
@@ -54,19 +50,19 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="https://freeeebie.github.io/" class="navbar-brand">
+            <a href="/" class="navbar-brand">
 Log            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                         <li class="active">
-                            <a href="https://freeeebie.github.io/category/misc.html">Misc</a>
+                            <a href="/category/misc.html">Misc</a>
                         </li>
                         <li >
-                            <a href="https://freeeebie.github.io/category/posts.html">Posts</a>
+                            <a href="/category/posts.html">Posts</a>
                         </li>
                         <li >
-                            <a href="https://freeeebie.github.io/category/test.html">Test</a>
+                            <a href="/category/test.html">Test</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -84,7 +80,7 @@ Log            </a>
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="https://freeeebie.github.io/mfcc.html"
+                    <a href="/mfcc.html"
                        rel="bookmark"
                        title="Permalink to "MFCC"">
                         "MFCC"
@@ -105,9 +101,9 @@ Log            </a>
 
 
 <span class="label label-default">Tags</span>
-	<a href="https://freeeebie.github.io/tag/machinenbsp.html">"Machine&nbsp</a>
+	<a href="/tag/machinenbsp.html">"Machine&nbsp</a>
         /
-	<a href="https://freeeebie.github.io/tag/learning.html">Learning"</a>
+	<a href="/tag/learning.html">Learning"</a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
@@ -156,7 +152,7 @@ http://practicalcryptography.com/miscellaneous/machine-learning/guide-mel-freque
    <div class="container">
       <hr>
       <div class="row">
-         <div class="col-xs-10">&copy; 2016 freeeebie
+         <div class="col-xs-10">&copy; 2017 freeeebie
             &middot; Powered by <a href="https://github.com/getpelican/pelican-themes/tree/master/pelican-bootstrap3" target="_blank">pelican-bootstrap3</a>,
             <a href="http://docs.getpelican.com/" target="_blank">Pelican</a>,
             <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>         </div>
@@ -164,13 +160,13 @@ http://practicalcryptography.com/miscellaneous/machine-learning/guide-mel-freque
       </div>
    </div>
 </footer>
-<script src="https://freeeebie.github.io/theme/js/jquery.min.js"></script>
+<script src="/theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="https://freeeebie.github.io/theme/js/bootstrap.min.js"></script>
+<script src="/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="https://freeeebie.github.io/theme/js/respond.min.js"></script>
+<script src="/theme/js/respond.min.js"></script>
 
 
 </body>
