--- a/index.html
+++ b/index.html
@@ -9,26 +9,24 @@
 
 
 
-<link rel="canonical" href="https://freeeebie.github.io">
+<link rel="canonical" href="">
         <meta name="author" content="freeeebie" />
 
     <!-- Open Graph tags -->
         <meta property="og:site_name" content="Log" />
         <meta property="og:type" content="website"/>
         <meta property="og:title" content="Log"/>
-        <meta property="og:url" content="https://freeeebie.github.io"/>
+        <meta property="og:url" content=""/>
         <meta property="og:description" content="Log"/>
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="https://freeeebie.github.io/theme/css/bootstrap.min.css" type="text/css"/>
-    <link href="https://freeeebie.github.io/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="/theme/css/bootstrap.min.css" type="text/css"/>
+    <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="https://freeeebie.github.io/theme/css/pygments/native.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://freeeebie.github.io/theme/css/style.css" type="text/css"/>
+    <link href="/theme/css/pygments/native.css" rel="stylesheet">
+    <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
 
-        <link href="https://freeeebie.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
-              title="Log ATOM Feed"/>
 
 
 
@@ -45,19 +43,19 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="https://freeeebie.github.io/" class="navbar-brand">
+            <a href="/" class="navbar-brand">
 Log            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                         <li >
-                            <a href="https://freeeebie.github.io/category/misc.html">Misc</a>
+                            <a href="/category/misc.html">Misc</a>
                         </li>
                         <li >
-                            <a href="https://freeeebie.github.io/category/posts.html">Posts</a>
+                            <a href="/category/posts.html">Posts</a>
                         </li>
                         <li >
-                            <a href="https://freeeebie.github.io/category/test.html">Test</a>
+                            <a href="/category/test.html">Test</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -72,7 +70,23 @@ Log            </a>
     <div class="row">
         <div class="col-sm-9">
             <article>
-                <h2><a href="https://freeeebie.github.io/bst-node-count.html">"BST node count"</a></h2>
+                <h2><a href="/HMM_Introduction.html">HMM Introduction</a></h2>
+                <div class="summary">
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Hidden-Markov-Model-Introduction">Hidden Markov Model Introduction<a class="anchor-link" href="#Hidden-Markov-Model-Introduction">&#182;</a></h2><p>Hidden Markov Model(HMM)이란 Markov Model 중 state 변화에 대하여 관찰자는 알지 못하고, 단지 결과만을 관측할 수 있는 Model 을 의미한다. 즉, state 변화가 hidden 되어 있다는 의미이다.<br>
+아래는 위키피디아에서 제시한 예제인데 이를 보면 HMM에 대하여 이해하기 수월하다.</p>
+<blockquote><p>관측자에게 보이지 않는 방이 있고, 그 안에 요정이 있다.방에는 항아리 $ X1,X2,X3,... $
+    가 존재한다. 각각의 항아리에는 $ y_1,y_2,y_3,...$으로 이름이 붙은 공들이 섞여서 들어가 있고, 항아리의 공들이 섞인 상태는 알려져있다. 요정은 방 안의 항아리를 하나 고르고, 항아리 안에서 무작위로 공을 하나 꺼내어 컨베이어 벨트에 올려둔다. 관측자는 컨베이어 벨트 위의 공의 순서를 관측할 수는 있지만, 해당 공들이 뽑혔던 항아리의 순서는 알 수 없다. 요정이 공을 뽑을 항아리를 고를 때는 다음과 같은 특별한 규칙을 따른다 : n번째 공을 뽑기 위한 항아리는 무작위 숫자와 (n-1)번째 공을 뽑기 위해 선택한 항아리에만 영향을 받는다. 현재 항아리로부터 하나보다 더 전에 선택된 항아리는 현재 항아리의 선택에 직접적으로 영향을 주지 않는다. (<a href="https://ko.wikipedia.org/wiki/%EC%9D%80%EB%8B%89_%EB%A7%88%EB%A5%B4%EC%BD%94%ED%94%84_%EB%AA%A8%EB%8D%B8">https://ko.wikipedia.org/wiki/%EC%9D%80%EB%8B%89_%EB%A7%88%EB%A5%B4%EC%BD%94%ED%94%84_%EB%AA%A8%EB%8D%B8</a>
+                    <a class="btn btn-default btn-xs" href="/HMM_Introduction.html">more ...</a>
+                </div>
+            </article>
+            <hr/>
+            <article>
+                <h2><a href="/bst-node-count.html">"BST node count"</a></h2>
                 <div class="summary"><h1>BST 에서 node 갯수 세기</h1>
 <p>left/right sub tree 의 children 숫자가 미리 주어졌을 때, 입력된 node 보다 큰 수 or 작은 수의 갯수 구하기  </p>
 <h2>입력 node 보다 작은 숫자 구하기</h2>
@@ -80,23 +94,23 @@ Log            </a>
 <li>start root  </li>
 <li>만약 입력 데이터보다 해당 노드의 숫자가 크다면(if input &lt; node.value), 왼쪽 노드로 이동  </li>
 <li>만약 입력 데이터보다 ...</li></ol>
-                    <a class="btn btn-default btn-xs" href="https://freeeebie.github.io/bst-node-count.html">more ...</a>
+                    <a class="btn btn-default btn-xs" href="/bst-node-count.html">more ...</a>
                 </div>
             </article>
             <hr/>
             <article>
-                <h2><a href="https://freeeebie.github.io/keyboard-shortcuts-for-bash.html">"Keyboard Shortcuts for Bash"</a></h2>
+                <h2><a href="/keyboard-shortcuts-for-bash.html">"Keyboard Shortcuts for Bash"</a></h2>
                 <div class="summary"><h1>Bash shell 단축키</h1>
 <p>http://www.howtogeek.com/howto/ubuntu/keyboard-shortcuts-for-bash-command-shell-for-ubuntu-debian-suse-redhat-linux-etc/ 에서 발췌함  </p>
 <p>Ctrl + A    Go to the beginning of the line you are currently typing on<br />
 Ctrl + E    Go to the end of the line you are currently typing on<br />
 Ctrl + L                Clears the Screen, similar to the clear command ...</p>
-                    <a class="btn btn-default btn-xs" href="https://freeeebie.github.io/keyboard-shortcuts-for-bash.html">more ...</a>
+                    <a class="btn btn-default btn-xs" href="/keyboard-shortcuts-for-bash.html">more ...</a>
                 </div>
             </article>
             <hr/>
             <article>
-                <h2><a href="https://freeeebie.github.io/linear-regression.html">"Linear Regression"</a></h2>
+                <h2><a href="/linear-regression.html">"Linear Regression"</a></h2>
                 <div class="summary"><h1>다항식 회귀</h1>
 <div class="math">$$ g(x_i | w_k, \cdots, w_1, w_0) = w_k(x_i)^k + \cdots + w_2(x_i)^2 + w_1(x_i) + w_0$$</div>
 <p><br />
@@ -105,12 +119,12 @@ $ \overrightarrow{z_i}= [x_i \:\:(x_i)^2 \:\cdots\: (x_i)^k] $ 를 갖는 다변
 <p>정확도를 어떻게 측정. 최대로 잘 맞는지  </p>
 <h1>overfitting</h1>
 <p>모델에 비해 data 가 너무 적어 noise 까지 ...</p>
-                    <a class="btn btn-default btn-xs" href="https://freeeebie.github.io/linear-regression.html">more ...</a>
+                    <a class="btn btn-default btn-xs" href="/linear-regression.html">more ...</a>
                 </div>
             </article>
             <hr/>
             <article>
-                <h2><a href="https://freeeebie.github.io/mle.html">"MLE"</a></h2>
+                <h2><a href="/mle.html">"MLE"</a></h2>
                 <div class="summary"><h1>최우도 추정</h1>
 <p>Maximum likelihood estimation<br />
 데이터들이 어떤 확률 분포에 가까운지 추정하는 방법 중 하나.  </p>
@@ -121,12 +135,12 @@ $ \overrightarrow{z_i}= [x_i \:\:(x_i)^2 \:\cdots\: (x_i)^k] $ 를 갖는 다변
 우도  <span class="math">\(L(D, \mu, \sigma)\)</span><br />
 여기에 로그를 취하면, <span class="math">\(\mathcal{L}(D, \mu, \sigma)\)</span>  </p>
 <p>최우도 ...</p>
-                    <a class="btn btn-default btn-xs" href="https://freeeebie.github.io/mle.html">more ...</a>
+                    <a class="btn btn-default btn-xs" href="/mle.html">more ...</a>
                 </div>
             </article>
             <hr/>
             <article>
-                <h2><a href="https://freeeebie.github.io/hwagryul.html">"확률"</a></h2>
+                <h2><a href="/hwagryul.html">"확률"</a></h2>
                 <div class="summary"><h1>확률분포</h1>
 <h2>Random Variable(확률변수)</h2>
 <p>정의  </p>
@@ -147,12 +161,12 @@ X: 함수</p>
 <h2>Maginary probability(주변확률)</h2>
 <p>두 변수중 한가지 확률변수 계산<br />
 왜  maginary 인가 ...</p>
-                    <a class="btn btn-default btn-xs" href="https://freeeebie.github.io/hwagryul.html">more ...</a>
+                    <a class="btn btn-default btn-xs" href="/hwagryul.html">more ...</a>
                 </div>
             </article>
             <hr/>
             <article>
-                <h2><a href="https://freeeebie.github.io/mfccwa-gmm-sayonghayeo-eumweon-bunryu.html">"MFCC와 GMM 사용하여 음원 분류"</a></h2>
+                <h2><a href="/mfccwa-gmm-sayonghayeo-eumweon-bunryu.html">"MFCC와 GMM 사용하여 음원 분류"</a></h2>
                 <div class="summary"><h1>Sound 분류</h1>
 <p>MFCC 와 GMM 을 사용하여 음원 파일을 인식하여 분류함  </p>
 <h2>precedure</h2>
@@ -165,12 +179,12 @@ X: 함수</p>
 <h2>GMM</h2>
 <p>clustering 기법<br />
 EM algorithm 사용  </p>
-                    <a class="btn btn-default btn-xs" href="https://freeeebie.github.io/mfccwa-gmm-sayonghayeo-eumweon-bunryu.html">more ...</a>
+                    <a class="btn btn-default btn-xs" href="/mfccwa-gmm-sayonghayeo-eumweon-bunryu.html">more ...</a>
                 </div>
             </article>
             <hr/>
             <article>
-                <h2><a href="https://freeeebie.github.io/mfcc.html">"MFCC"</a></h2>
+                <h2><a href="/mfcc.html">"MFCC"</a></h2>
                 <div class="summary"><p>음성 데이터의 특징 추출<br />
 성대의 떨림은 고유함.성도를 system H 라고 가정하여<br />
 이 시스템 H의 특징을 찾음.  </p>
@@ -185,12 +199,12 @@ mel filter bank 적용<br />
 log 적용<br />
 5 step<br />
 DCT ...</p>
-                    <a class="btn btn-default btn-xs" href="https://freeeebie.github.io/mfcc.html">more ...</a>
+                    <a class="btn btn-default btn-xs" href="/mfcc.html">more ...</a>
                 </div>
             </article>
             <hr/>
             <article>
-                <h2><a href="https://freeeebie.github.io/first-post.html">First Post</a></h2>
+                <h2><a href="/first-post.html">First Post</a></h2>
                 <div class="summary">
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
@@ -204,15 +218,15 @@ DCT ...</p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-                    <a class="btn btn-default btn-xs" href="https://freeeebie.github.io/first-post.html">more ...</a>
+                    <a class="btn btn-default btn-xs" href="/first-post.html">more ...</a>
                 </div>
             </article>
             <hr/>
             <article>
-                <h2><a href="https://freeeebie.github.io/first_post.html">first_post</a></h2>
+                <h2><a href="/first_post.html">first_post</a></h2>
                 <div class="summary"><p>Hello World from Pelican!</p>
 
-                    <a class="btn btn-default btn-xs" href="https://freeeebie.github.io/first_post.html">more ...</a>
+                    <a class="btn btn-default btn-xs" href="/first_post.html">more ...</a>
                 </div>
             </article>
             <hr/>
@@ -237,7 +251,7 @@ DCT ...</p>
    <div class="container">
       <hr>
       <div class="row">
-         <div class="col-xs-10">&copy; 2016 freeeebie
+         <div class="col-xs-10">&copy; 2017 freeeebie
             &middot; Powered by <a href="https://github.com/getpelican/pelican-themes/tree/master/pelican-bootstrap3" target="_blank">pelican-bootstrap3</a>,
             <a href="http://docs.getpelican.com/" target="_blank">Pelican</a>,
             <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>         </div>
@@ -245,13 +259,13 @@ DCT ...</p>
       </div>
    </div>
 </footer>
-<script src="https://freeeebie.github.io/theme/js/jquery.min.js"></script>
+<script src="/theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="https://freeeebie.github.io/theme/js/bootstrap.min.js"></script>
+<script src="/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="https://freeeebie.github.io/theme/js/respond.min.js"></script>
+<script src="/theme/js/respond.min.js"></script>
 
 
 </body>
