--- a/keyboard-shortcuts-for-bash.html
+++ b/keyboard-shortcuts-for-bash.html
@@ -9,7 +9,7 @@
 
 
 
-<link rel="canonical" href="https://freeeebie.github.io/keyboard-shortcuts-for-bash.html">
+<link rel="canonical" href="/keyboard-shortcuts-for-bash.html">
 
         <meta name="author" content="freeeebie" />
         <meta name="keywords" content="info" />
@@ -18,7 +18,7 @@
         <meta property="og:site_name" content="Log" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="&#34;Keyboard Shortcuts for Bash&#34;"/>
-        <meta property="og:url" content="https://freeeebie.github.io/keyboard-shortcuts-for-bash.html"/>
+        <meta property="og:url" content="/keyboard-shortcuts-for-bash.html"/>
         <meta property="og:description" content="Bash shell 단축키 http://www.howtogeek.com/howto/ubuntu/keyboard-shortcuts-for-bash-command-shell-for-ubuntu-debian-suse-redhat-linux-etc/ 에서 발췌함 Ctrl + A Go to the beginning of the line you are currently typing on Ctrl + E Go to the end of the line you are currently typing on Ctrl + L Clears the Screen, similar to the clear command ..."/>
         <meta property="article:published_time" content="2016-10-02" />
             <meta property="article:section" content="misc" />
@@ -27,19 +27,15 @@
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="https://freeeebie.github.io/theme/css/bootstrap.min.css" type="text/css"/>
-    <link href="https://freeeebie.github.io/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="/theme/css/bootstrap.min.css" type="text/css"/>
+    <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="https://freeeebie.github.io/theme/css/pygments/native.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://freeeebie.github.io/theme/css/style.css" type="text/css"/>
-
-        <link href="https://freeeebie.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
-              title="Log ATOM Feed"/>
+    <link href="/theme/css/pygments/native.css" rel="stylesheet">
+    <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
 
 
 
-        <link href="https://freeeebie.github.io/feeds/misc.atom.xml" type="application/atom+xml" rel="alternate"
-              title="Log misc ATOM Feed"/>
+
 
 </head>
 <body>
@@ -53,19 +49,19 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="https://freeeebie.github.io/" class="navbar-brand">
+            <a href="/" class="navbar-brand">
 Log            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                         <li class="active">
-                            <a href="https://freeeebie.github.io/category/misc.html">Misc</a>
+                            <a href="/category/misc.html">Misc</a>
                         </li>
                         <li >
-                            <a href="https://freeeebie.github.io/category/posts.html">Posts</a>
+                            <a href="/category/posts.html">Posts</a>
                         </li>
                         <li >
-                            <a href="https://freeeebie.github.io/category/test.html">Test</a>
+                            <a href="/category/test.html">Test</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -83,7 +79,7 @@ Log            </a>
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="https://freeeebie.github.io/keyboard-shortcuts-for-bash.html"
+                    <a href="/keyboard-shortcuts-for-bash.html"
                        rel="bookmark"
                        title="Permalink to "Keyboard Shortcuts for Bash"">
                         "Keyboard Shortcuts for Bash"
@@ -104,7 +100,7 @@ Log            </a>
 
 
 <span class="label label-default">Tags</span>
-	<a href="https://freeeebie.github.io/tag/info.html">info</a>
+	<a href="/tag/info.html">info</a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
@@ -152,7 +148,7 @@ Tab Auto-complete files and folder names  </p>
    <div class="container">
       <hr>
       <div class="row">
-         <div class="col-xs-10">&copy; 2016 freeeebie
+         <div class="col-xs-10">&copy; 2017 freeeebie
             &middot; Powered by <a href="https://github.com/getpelican/pelican-themes/tree/master/pelican-bootstrap3" target="_blank">pelican-bootstrap3</a>,
             <a href="http://docs.getpelican.com/" target="_blank">Pelican</a>,
             <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>         </div>
@@ -160,13 +156,13 @@ Tab Auto-complete files and folder names  </p>
       </div>
    </div>
 </footer>
-<script src="https://freeeebie.github.io/theme/js/jquery.min.js"></script>
+<script src="/theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="https://freeeebie.github.io/theme/js/bootstrap.min.js"></script>
+<script src="/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="https://freeeebie.github.io/theme/js/respond.min.js"></script>
+<script src="/theme/js/respond.min.js"></script>
 
 
 </body>
