--- a/mfccwa-gmm-sayonghayeo-eumweon-bunryu.html
+++ b/mfccwa-gmm-sayonghayeo-eumweon-bunryu.html
@@ -9,7 +9,7 @@
 
 
 
-<link rel="canonical" href="https://freeeebie.github.io/mfccwa-gmm-sayonghayeo-eumweon-bunryu.html">
+<link rel="canonical" href="/mfccwa-gmm-sayonghayeo-eumweon-bunryu.html">
 
         <meta name="author" content="freeeebie" />
         <meta name="description" content="Sound 분류 MFCC 와 GMM 을 사용하여 음원 파일을 인식하여 분류함 precedure trainging data 의 MFCC 추출 각 training data 에 대한 GMM 생성 입력 음원에 대하여 MFCC 추출 각 GMM 에 대하여 확률을 계산하여 best 한 GMM 모델을 선택 GMM clustering 기법 EM algorithm 사용" />
@@ -17,7 +17,7 @@
         <meta property="og:site_name" content="Log" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="&#34;MFCC와 GMM 사용하여 음원 분류&#34;"/>
-        <meta property="og:url" content="https://freeeebie.github.io/mfccwa-gmm-sayonghayeo-eumweon-bunryu.html"/>
+        <meta property="og:url" content="/mfccwa-gmm-sayonghayeo-eumweon-bunryu.html"/>
         <meta property="og:description" content="Sound 분류 MFCC 와 GMM 을 사용하여 음원 파일을 인식하여 분류함 precedure trainging data 의 MFCC 추출 각 training data 에 대한 GMM 생성 입력 음원에 대하여 MFCC 추출 각 GMM 에 대하여 확률을 계산하여 best 한 GMM 모델을 선택 GMM clustering 기법 EM algorithm 사용"/>
         <meta property="article:published_time" content="2016-09-11" />
             <meta property="article:section" content="misc" />
@@ -25,19 +25,15 @@
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="https://freeeebie.github.io/theme/css/bootstrap.min.css" type="text/css"/>
-    <link href="https://freeeebie.github.io/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="/theme/css/bootstrap.min.css" type="text/css"/>
+    <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="https://freeeebie.github.io/theme/css/pygments/native.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://freeeebie.github.io/theme/css/style.css" type="text/css"/>
-
-        <link href="https://freeeebie.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
-              title="Log ATOM Feed"/>
+    <link href="/theme/css/pygments/native.css" rel="stylesheet">
+    <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
 
 
 
-        <link href="https://freeeebie.github.io/feeds/misc.atom.xml" type="application/atom+xml" rel="alternate"
-              title="Log misc ATOM Feed"/>
+
 
 </head>
 <body>
@@ -51,19 +47,19 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="https://freeeebie.github.io/" class="navbar-brand">
+            <a href="/" class="navbar-brand">
 Log            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                         <li class="active">
-                            <a href="https://freeeebie.github.io/category/misc.html">Misc</a>
+                            <a href="/category/misc.html">Misc</a>
                         </li>
                         <li >
-                            <a href="https://freeeebie.github.io/category/posts.html">Posts</a>
+                            <a href="/category/posts.html">Posts</a>
                         </li>
                         <li >
-                            <a href="https://freeeebie.github.io/category/test.html">Test</a>
+                            <a href="/category/test.html">Test</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -81,7 +77,7 @@ Log            </a>
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="https://freeeebie.github.io/mfccwa-gmm-sayonghayeo-eumweon-bunryu.html"
+                    <a href="/mfccwa-gmm-sayonghayeo-eumweon-bunryu.html"
                        rel="bookmark"
                        title="Permalink to "MFCC와 GMM 사용하여 음원 분류"">
                         "MFCC와 GMM 사용하여 음원 분류"
@@ -141,7 +137,7 @@ EM algorithm 사용  </p>
    <div class="container">
       <hr>
       <div class="row">
-         <div class="col-xs-10">&copy; 2016 freeeebie
+         <div class="col-xs-10">&copy; 2017 freeeebie
             &middot; Powered by <a href="https://github.com/getpelican/pelican-themes/tree/master/pelican-bootstrap3" target="_blank">pelican-bootstrap3</a>,
             <a href="http://docs.getpelican.com/" target="_blank">Pelican</a>,
             <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>         </div>
@@ -149,13 +145,13 @@ EM algorithm 사용  </p>
       </div>
    </div>
 </footer>
-<script src="https://freeeebie.github.io/theme/js/jquery.min.js"></script>
+<script src="/theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="https://freeeebie.github.io/theme/js/bootstrap.min.js"></script>
+<script src="/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="https://freeeebie.github.io/theme/js/respond.min.js"></script>
+<script src="/theme/js/respond.min.js"></script>
 
 
 </body>
